// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Graph Plugins > Dijkstra executes without errors 1`] = `
{
  "events": [
    {
      "distance": 0,
      "id": "00000000-0000-0000-0000-000000000000",
      "nodeId": "A",
      "step": 0,
      "timestamp": 0,
      "type": "GRAPH_NODE_HIGHLIGHT",
    },
    {
      "accepted": true,
      "edgeId": "e1",
      "id": "00000000-0000-0000-0000-000000000000",
      "step": 1,
      "timestamp": 0,
      "type": "GRAPH_EDGE_HIGHLIGHT",
    },
    {
      "edgeId": "e1",
      "id": "00000000-0000-0000-0000-000000000000",
      "step": 2,
      "timestamp": 0,
      "type": "GRAPH_RELAX",
      "weight": 5,
    },
    {
      "distance": 5,
      "id": "00000000-0000-0000-0000-000000000000",
      "nodeId": "B",
      "step": 3,
      "timestamp": 0,
      "type": "GRAPH_NODE_HIGHLIGHT",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "level": "INFO",
      "message": "Dijkstra complete from "A". Relaxed 3 edges.",
      "step": 4,
      "timestamp": 0,
      "type": "SYSTEM_LOG",
    },
  ],
  "metadata": {
    "algorithmName": "Dijkstra Shortest Path",
    "executionTimeMs": 0,
    "nodeCount": 2,
    "spaceComplexity": "O(V)",
    "timeComplexity": "O((V+E) log V)",
  },
}
`;

exports[`Graph Plugins > Kruskal executes without errors 1`] = `
{
  "events": [
    {
      "accepted": true,
      "edgeId": "e1",
      "id": "00000000-0000-0000-0000-000000000000",
      "step": 0,
      "timestamp": 0,
      "type": "GRAPH_EDGE_HIGHLIGHT",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "level": "INFO",
      "message": "Kruskal MST complete. Total weight: 5. Edges in tree: 1.",
      "step": 1,
      "timestamp": 0,
      "type": "SYSTEM_LOG",
    },
  ],
  "metadata": {
    "algorithmName": "Kruskal MST",
    "executionTimeMs": 0,
    "nodeCount": 2,
    "spaceComplexity": "O(V)",
    "timeComplexity": "O(E log E)",
  },
}
`;
